# awear-msg

./: .gitignore  CLAUDE.md  DESIGN.md  FUTURE.md  README.md
clients/python/: README.md  pyproject.toml
clients/python/client/: __init__.py  __main__.py  core.py  protocol.py  store.py
clients/swift/: Package.swift  README.md
clients/swift/.build/: build.db  plugin-tools.yaml
clients/swift/.build/arm64-apple-macosx/release/: messaging-client  plugin-tools-description.json
clients/swift/.build/arm64-apple-macosx/release/ModuleCache/D45IATKQTKJ7/: CFNetwork-1PNPO1ORVQZLS.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  MachO-20RPYVQSX341K.pcm  (+24 more)
clients/swift/.build/arm64-apple-macosx/release/Modules/: messaging_client.swiftdoc  messaging_client.swiftmodule  messaging_client.swiftsourceinfo
clients/swift/.build/arm64-apple-macosx/release/messaging-client.product/: Objects.LinkFileList
clients/swift/.build/arm64-apple-macosx/release/messaging_client.build/: messaging_client.d  output-file-map.json  sources
clients/swift/Sources/messaging-client/: Core.swift  Protocol.swift  Store.swift  main.swift
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: cli.ts  core.ts  protocol.ts  store.ts
conformance/: run.py
harness/: generate.sh
harness/prompts/: client.md
server/: app.py
spec/: behavior.md  behaviour.md  control-interface.md  protocol.md
spec/conformance/: scenario_01.yaml
spec/platform/: python.md  swift.md  typescript.md
(+3 files in other folders)
