[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-messaging-client"
version = "1.0.0"
description = "Dependency-free Python client for the local messaging protocol (spec-driven)."
requires-python = ">=3.11"
# No runtime dependencies: standard library only (spec/platform/python.md).
dependencies = []

[tool.setuptools]
packages = ["client"]
